--- a/css/_script.scss
+++ b/css/_script.scss
@@ -23,6 +23,10 @@
         .person{
             width: 28%;
             line-height: 1.5;
+            img{
+                width: 100px;
+                height: 100px;
+            }
         }
         .content{
             line-height: 1.8;
