--- a/css/all.css
+++ b/css/all.css
@@ -663,7 +663,9 @@ body a {
 }
 
 .index .a666 {
-  padding-top: 150px;
+  padding-top: 100px;
+  font-size: 45px;
+  line-height: 1.8;
 }
 
 .index .explain {
@@ -683,7 +685,7 @@ body a {
 }
 
 .index .explain .content-1 {
-  height: 150px;
+  height: 170px;
 }
 
 .index .explain .content-2 {
@@ -701,11 +703,7 @@ body a {
 
 .index .explain .content-img .arrow-right {
   width: 120px;
-  height: 150px;
-}
-
-.index .explain h3 {
-  font-size: 30px;
+  height: 160px;
 }
 
 .index .explain .zolly {
@@ -724,7 +722,7 @@ body a {
 }
 
 .index .add {
-  padding: 10px 50px 150px;
+  padding: 10px 50px 120px;
   position: relative;
   background-color: #F0F6FD;
 }
@@ -737,7 +735,7 @@ body a {
   border: 1px solid #eee;
   -webkit-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.27), 0 0 60px rgba(0, 0, 0, 0.06) inset;
           box-shadow: 0 2px 4px rgba(0, 0, 0, 0.27), 0 0 60px rgba(0, 0, 0, 0.06) inset;
-  line-height: 1.5;
+  line-height: 1.8;
 }
 
 .index .tape {
@@ -982,6 +980,18 @@ body a {
   .index .block2 {
     margin-bottom: 20px;
   }
+  .index .explain .zolly, .index .explain .dinu, .index .explain .lynn {
+    display: none;
+  }
+  .index .explain .content-1 {
+    height: 150px;
+  }
+  .index .explain .content-1 p {
+    margin-left: 0;
+  }
+  .index .explain .content-2 {
+    height: auto;
+  }
 }
 
 @media (max-width: 900px) {
@@ -994,6 +1004,9 @@ body a {
   }
   .index .sub-banner .focus {
     font-size: 45px;
+  }
+  .index .a666 {
+    font-size: 40px;
   }
   .index .self-intro {
     -ms-flex-wrap: wrap;
@@ -1075,8 +1088,30 @@ body a {
   .index .bg-pic {
     height: 660px;
   }
-  .index .index-con, .index .three h2 {
+  .index .index-con, .index .three h2, .index .a666 {
     font-size: 35px;
+  }
+  .index .a666 {
+    margin-bottom: 70px;
+  }
+  .index .explain {
+    padding: 0 50px 30px;
+  }
+  .index .explain h3 {
+    font-size: 30px;
+  }
+  .index .explain p {
+    line-height: 1.8;
+  }
+  .index .explain .arrow-down {
+    width: 80px;
+    height: 130px;
+  }
+  .index .explain-pc, .index .arrow-left, .index .arrow-right {
+    display: none;
+  }
+  .index .explain-mob {
+    display: block;
   }
 }
 
@@ -1102,7 +1137,7 @@ body a {
   .index .bg-pic {
     height: 600px;
   }
-  .index .index-con, .index .three h2 {
+  .index .index-con, .index .three h2, .index .a666 {
     font-size: 30px;
   }
   .index .self-intro .content, .index .weapon li {
@@ -1151,7 +1186,23 @@ body a {
   .index .bg-pic {
     height: 490px;
   }
-  .index .index-con, .index .three h2 {
+  .index .explain-mob .arrow-down {
+    width: 50px;
+    height: 80px;
+    margin-bottom: 20px;
+  }
+  .index .explain-mob h3 {
+    font-size: 24px;
+    margin-bottom: 20px;
+  }
+  .index .explain-mob p {
+    font-size: 20px;
+    margin-bottom: 20px;
+  }
+  .index .a666 {
+    margin-bottom: 50px;
+  }
+  .index .index-con, .index .three h2, .index .a666 {
     font-size: 24px;
   }
   .index .pc-title {
